--- a/Frontend-Assignment-HY-master/style.css
+++ b/Frontend-Assignment-HY-master/style.css
@@ -256,6 +256,7 @@ html,body {
     justify-content: space-between;
     margin:0 auto;
     margin-top: 100px;
+    perspective: 1000px;
 }
 
 .card__item {
@@ -265,7 +266,13 @@ html,body {
     position: relative;
     box-shadow: 0 10px 10px rgba(15, 31, 114, 0.2);
     opacity: 0;
-    transform: translateY(150px);
+    transform: translate3d(0, 150px, 0);
+    cursor: pointer;
+    transition: all 0.75s cubic-bezier(0.15, 0.65, 0.2, 1);
+}
+.card__item.detail {
+    z-index: 1;
+    transform: translate3d(0%, 0%, 200px) !important;
 }
 
 .card__background {
@@ -322,10 +329,28 @@ html,body {
 
 
 #contents section.half {
-    display: flex;
+    width: 100%;
     height: 50vw;
     min-height: 700px;
     box-shadow: 0 0 15px rgba(0,0,0,0.1);
+    overflow: hidden;
+    position: relative;
+}
+
+#contents section.half .slide {
+    display: flex;
+    width: 400%;
+    height: 100%;
+    position: absolute;
+}
+#contents section.half .slide.show {
+    transition: all 0.5s ease-in-out;
+}
+
+#contents section.half .slide .align_box {
+    width: 25%;
+    height: 100%;
+    display: flex;
 }
 
 .half__item {
@@ -334,47 +359,33 @@ html,body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
     position: relative;
 }
 .half__item:nth-of-type(2){
-    padding: 200px 50px;
+    padding: 50px;
 }
 
 .half__item .section-text{
     padding: 0 100px;
-    margin-top: 50px;
-    /* overflow: scroll; */
-}
-
-.half__item .section-btn {
-    margin-top: 50px;
-}
-.half__item .section-btn ul {
-    display: flex;
-    justify-content: space-between;
-}
-.half__item .section-btn li {
-
-}
-.half__item .section-btn li a {
-    display: inline-block;
-    text-align: center;
-    /* background-color: tan; */
-    background-color: silver;
-    font-size: 20px;
-    width: 150px;
-    padding: 8px 0;
-    box-sizing: border-box;
-    color: #fff;
+    margin-top: 100px;
 }
 
 .half__background{
     width: 100%; height: 100%;
-    background-image: url(image/half1.jpeg) ;
+    background-image: url(image/half1.jpeg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
+}
+.align_box:nth-child(2) .half__background {
+    background-image: url(image/half2.jpg);
+}
+.align_box:nth-child(3) .half__background {
+    background-image: url(image/half3.jpg);
+}
+.align_box:nth-child(4) .half__background {
+    background-image: url(image/half4.jpg);
 }
 .half__backgroundshapes {
     position: absolute;
@@ -388,6 +399,29 @@ html,body {
     display: inline-block;
     width: 200px; height: 200px;
     border: 1px solid #fff;
+}
+
+.slide_btn {
+    position: absolute; bottom: 6%; right: 3%;
+}
+.slide_btn a {
+    display: inline-block;
+    font-size: 20px;
+    border: 1px solid rgba(0,0,0,0.2);
+    border-radius: 5px;
+    padding: 7px 14px;
+    margin-right: 10px;
+    color: #777;
+    transition: 0.3s;
+    box-sizing: border-box;
+}
+.slide_btn a:hover {
+    background-color: rgba(0,0,0,0.2);
+    color: #fff;
+}
+.slide_btn a.prev.hidden, 
+.slide_btn a.next.hidden {
+    visibility: hidden;
 }
 
 #contents section.subscribe {
