--- a/port/css/style5.css
+++ b/port/css/style5.css
@@ -22,7 +22,7 @@ html, body {
 }
 #section5 {
     position: relative; z-index: 2;
-    height: 13000px;
+    height: 7000px;
     background: #1E88FF;
     transition: background-color 1s;
 }
@@ -747,7 +747,8 @@ h1.main-tit .split span {
 .ani-wrap {
     position: fixed; top: 0; left: 0;
     width: 100%;
-    height: 100vw;
+    /* height: 100vw; */
+    
 }
 .ani-wrap .bg-title {
     display: flex;
@@ -1442,7 +1443,17 @@ h1.main-tit .split span {
     .container {width: 100%;}
     .row {padding: 0 3%;}
 }
-
+@media (max-width: 1366px) {
+    .bg-title .anitxt {
+        font-size: 102px;
+    }
+    .ani-content {
+        top: 14.5%;
+    }
+    .ani-content > div {
+        height: 452px;
+    }
+}
 @media (max-width: 1300px){
     /* header */
     .header-title .desc {
@@ -1792,7 +1803,7 @@ h1.main-tit .split span {
         height: 4000px;
     }
     .bg-title .anitxt {
-        font-size: 126px;
+        /* font-size: 126px; */
     }
     .ani-content {
         top: 15%;
