--- a/port/css/style5.css
+++ b/port/css/style5.css
@@ -1803,7 +1803,7 @@ h1.main-tit .split span {
         height: 4000px;
     }
     .bg-title .anitxt {
-        /* font-size: 126px; */
+        font-size: 126px;
     }
     .ani-content {
         top: 15%;
