--- a/port/css/style5 copy.css
+++ b/port/css/style5 copy.css
@@ -1890,6 +1890,9 @@ h1.main-tit .split span {
         padding-left: 6px;
         margin-bottom: 10px;
     }
+    .scriptimg-wrap.rotate {
+        transform: translate3d(0%, 0%, -1000px) rotate3d(-1,-1.5,.4,-40deg);
+    }
 }
 
 
