--- a/port/css/style5 copy.css
+++ b/port/css/style5 copy.css
@@ -1208,6 +1208,9 @@ h1.main-tit .split span {
     color: #000;
     animation-play-state: paused;
 }
+.notice {
+    display: none;
+}
 .click-wrap {
     width: 100%;
     height: 100vh;
@@ -1898,6 +1901,21 @@ h1.main-tit .split span {
     }
     .scriptimg-wrap.rotate {
         transform: translate3d(0%, 0%, -1000px) rotate3d(-1,-1.5,.4,-40deg);
+    }
+    .notice {
+        display: block;
+        position: absolute;
+        top: 56%;
+        font-family: 'S-CoreDream-3Light';
+        font-size: 3vw;
+        padding-left: 6px;
+        color: #fff;
+        letter-spacing: 0.5px;
+        box-sizing: border-box;
+    }
+    .notice strong {
+        color: orange;
+        font-weight: normal;
     }
     .click-wrap {
         width: 106%;
