--- a/port/css/style5 copy.css
+++ b/port/css/style5 copy.css
@@ -1938,6 +1938,9 @@ h1.main-tit .split span {
     }
 
     /* section7 */
+    #section7 {
+        background: #1b1b1b;
+    }
     #section7 .sub-tit {
         font-size: 16px;
         margin-top: 40px;
